[project]
name = "tms-targeting-pipeline"
version = "0.1.0"
description = "Parametric analysis of fMRI files for TMS targeting reliability"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0",
    "lxml>=5.3",
    "matplotlib>=3.10",
    "nibabel>=5.3",
    "nilearn>=0.12",
    "numpy>=2.3",
    "pandas>=2.3",
    "ptitprince>=0.3",
    "scikit-learn>=1.7",
    "scipy>=1.16",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]
