[project]
name = "tms-targeting-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=4.0",
    "nilearn>=0.11",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "patsy>=1.0",
    "ptitprince>=0.3",
    "lxml>=5.3",
    "requests>=2.32",
    "pillow>=11.0",
    "ipykernel>=7.0",
]
